--- a/AuthSystem/Views/Home/Index.cshtml
+++ b/AuthSystem/Views/Home/Index.cshtml
@@ -2,17 +2,10 @@
     ViewData["Title"] = "Home Page";
 }
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AnyChat Conversations</title>
     <link rel="stylesheet" href="~/css/Landing.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"> <!-- Added Font Awesome CSS -->
-</head>
-<body>
+
   <div class="outer-container">
         <div class="side-content pl-5 left">
             <img src="img/1st.png" alt="pic1">
@@ -28,7 +21,7 @@
             </button>
     </div>
     <div class="side-content right pl-5">
-        <img src="img/2nd.png" alt="pic2">
+        <img class ="img-2" src="img/2nd.png" alt="pic2">
     </div>
 </div>
     <div class="file-sharing-background">
@@ -83,5 +76,3 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> 
-</body>
-</html>
