--- a/AuthSystem/Views/Shared/_LoginPartial.cshtml
+++ b/AuthSystem/Views/Shared/_LoginPartial.cshtml
@@ -30,6 +30,8 @@
                     <li><a class="dropdown-item" asp-area="Identity" asp-page="/AdminUserCreation">AdminCreate</a></li>
                     <li><hr class="dropdown-divider"></li>
                     <li><a class="dropdown-item" asp-area="Identity" asp-page="/Admin/Index">CRUD</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" asp-area="Identity" asp-page="/Admin/AdminDashboard">Dashboard</a></li>
                 </ul>
             </li>
         }
