--- a/AuthSystem/wwwroot/css/Landing.css
+++ b/AuthSystem/wwwroot/css/Landing.css
@@ -74,6 +74,7 @@ body {
         width: auto;
         height: 420px;
         margin: 10px 0;
+        margin-left:40px;
     }
 
 .file-sharing-background {
