--- a/AuthSystem/Areas/Identity/Pages/AdminUserCreationConfirmation.cshtml
+++ b/AuthSystem/Areas/Identity/Pages/AdminUserCreationConfirmation.cshtml
@@ -4,5 +4,8 @@
     ViewData["Title"] = "User Created";
 }
 
+<div style="margin-left:50px">
 <h2>User Created Successfully</h2>
 <p>The user has been created and an email has been sent to them with further instructions.</p>
+    <button><a class="nav-link" asp-area="Identity" asp-page="/Admin/Index">Back to List</a></button>
+</div>
