--- a/AuthSystem/wwwroot/css/Admin/adminDash.css
+++ b/AuthSystem/wwwroot/css/Admin/adminDash.css
@@ -19,6 +19,7 @@ a {
     border-radius: 7px; /* Rounded button corners */
     padding: 10px 15px; /* Adjust padding for button size */
     transition: background-color 0.3s, color 0.3s; /* Smooth transition for color change */
+    margin-right:25px;
 }
 
     /* Button within danger button hover state */
@@ -32,6 +33,7 @@ a {
 .table a i.fas {
     color: #6c757d; /* Initial gray color */
     transition: color 0.3s; /* Smooth transition for color change */
+    margin-right:15px;
 }
 
 /* Hover state for edit and delete icons */
@@ -53,7 +55,7 @@ a {
 /* Table header and data alignment */
 .table th, .table td {
     text-align: center;
-    padding: 12px 8px; /* Adjust padding instead of margin */
+    padding: 14px 8px; /* Adjust padding instead of margin */
 }
 
 /* Table row styling to ensure consistent spacing */
@@ -63,16 +65,19 @@ a {
 
     /* Last table row to ensure consistent spacing */
     .table tr:last-child td {
-        padding-bottom: 12px; /* Ensure last row has the same bottom padding */
+        padding-bottom: 18px; /* Ensure last row has the same bottom padding */
     }
 
 /* Styling for badge indicating success */
 .badge-success {
     background-color: #28a745;
     color: white;
-    font-size: 0.8em; /* Decrease font size */
+    font-size: 0.9em; /* Decrease font size */
     padding: 5px 10px; /* Adjust padding for smaller font size */
     font-weight: normal;
+    width:70px;
+    height:24px;
+    margin-bottom:12px;
 }
 
 /* Styling for badge indicating secondary status */
@@ -87,6 +92,8 @@ a {
 /* Adjustments for the search bar */
 .search-bar {
     padding: 6px 0; /* Adjust horizontal padding */
+    max-width:800px;
+    margin-left:18px;
    
 }
 
@@ -104,7 +111,7 @@ a {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 20px;
+
     margin-right: 30px; /* Add right margin */
 }
 
