--- a/AuthSystem/Areas/Identity/Pages/Admin/ActiveUsers.cshtml
+++ b/AuthSystem/Areas/Identity/Pages/Admin/ActiveUsers.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
 @model ActiveUsersModel
-@using AuthSystem.Areas.Identity.Data; // Adjust namespace if necessary
+@using AuthSystem.Areas.Identity.Data; 
 @using Microsoft.AspNetCore.Identity;
 @using Microsoft.AspNetCore.Mvc.RazorPages;
 @using Microsoft.EntityFrameworkCore;
@@ -8,7 +8,7 @@
 @using System.Linq;
 @using System.Threading.Tasks;
 
-<h2>Active Users</h2>
+<h2>Inactive Users</h2>
 
 <table class="table">
     <thead>
@@ -21,7 +21,7 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var user in Model.ActiveUsers)
+        @foreach (var user in Model.InactiveUsers)
         {
             <tr>
                 <td>@user.Email</td>
@@ -51,5 +51,3 @@
         }
     </tbody>
 </table>
-
-@* Ensure to include any necessary scripts or stylesheets *@
