--- a/AuthSystem/Views/Shared/_LoginPartial.cshtml
+++ b/AuthSystem/Views/Shared/_LoginPartial.cshtml
@@ -18,11 +18,15 @@
 
         @if (User.IsInRole("Admin"))
         {
+            <li class="nav-item">
+               <li><a class="nav-link" asp-area="Identity" asp-page="/Admin/Index">Home</a></li>
+            </li>
+            <!--
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle text-dark" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Admin
                 </a>
-                <ul class="dropdown-menu">
+               <ul class="dropdown-menu">
                     <li><a class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Index">Profile</a></li>
                     <li><hr class="dropdown-divider"></li>
                     <li><a class="dropdown-item" asp-area="Identity" asp-page="/Account/Logout">Logout</a></li>
@@ -34,6 +38,7 @@
                     <li><a class="dropdown-item" asp-area="Identity" asp-page="/Admin/AdminDashboard">Dashboard</a></li>
                 </ul>
             </li>
+            -->
         }
         else
         {
