--- a/AuthSystem/Areas/Identity/Pages/Admin/Edit.cshtml
+++ b/AuthSystem/Areas/Identity/Pages/Admin/Edit.cshtml
@@ -31,7 +31,7 @@
                 </select>
                 <span asp-validation-for="Input.ActiveStatus" class="text-danger"></span>
             </div>
-            <div class="form-group">
+           <!-- <div class="form-group">
                 <label asp-for="Input.IsDisabled"></label>
                 <select asp-for="Input.IsDisabled" class="form-control">
                     <option value="true">True</option>
@@ -39,6 +39,7 @@
                 </select>
                 <span asp-validation-for="Input.IsDisabled" class="text-danger"></span>
             </div>
+             -->
             <button type="submit" class="save-btn">Save</button>
         </form>
 
