--- a/AuthSystem/Areas/Identity/Pages/Admin/Index.cshtml
+++ b/AuthSystem/Areas/Identity/Pages/Admin/Index.cshtml
@@ -21,9 +21,9 @@
         <a class="btn-add-user" asp-area="Identity" asp-page="ActiveUsers">
             Inactive Users
         </a>
-        <a class="btn-add-user" asp-area="Identity" asp-page="DisabledUsers">
+        <!--<a class="btn-add-user" asp-area="Identity" asp-page="DisabledUsers">
             Disabled Users
-        </a>
+        </a>-->
         <a class="btn-add-user" asp-area="Identity" asp-page="/AdminUserCreation">
             <i class="fas fa-plus-circle"></i> Add User
         </a>
