--- a/AuthSystem/Areas/Identity/Pages/Account/Login.cshtml
+++ b/AuthSystem/Areas/Identity/Pages/Account/Login.cshtml
@@ -11,7 +11,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewData["Title"] - ChatterBox</title>
-    <link rel="stylesheet" href="~/css/login.css?v=1.0">
+    <link rel="stylesheet" href="~/css/Login.css?v=1.0">
 </head>
 <body>
     <!-- Main Content -->
@@ -66,7 +66,10 @@
                                     <p>
                                         @foreach (var provider in Model.ExternalLogins!)
                                         {
-                                            <button type="submit" class="btn btn-danger" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
+                                            <button type="submit" class="btn google-button" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">
+                                                <img src="https://developers.google.com/identity/images/g-logo.png" alt="Google logo">
+                                                Sign in with Google
+                                            </button>
                                         }
                                     </p>
                                 </div>
